# system-software-lab-2-1

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  cli_app.php  coro_test.mylang  crud.mylang  ext3.img  input.mylang  input_jvm.mylang  lab2_min.mylang  lab2_test.mylang  mkimg.py  output.mmd  run_daemon.bat  run_input_jvm.php  scheduling.mylang  server.mylang  shm_client.php  stop_daemon.bat  test_byte.mylang  test_fg2.mylang  test_fget.mylang  test_fgetc.mylang  test_fopen.mylang  test_half.mylang  test_hlf.mylang  test_hlp.mylang  test_nobuf.mylang  test_p2.mylang  test_p3.mylang  test_p4.mylang  test_p5.mylang  test_parse.mylang  test_peo.mylang  test_raw.mylang  test_seq.mylang  test_shm.php  test_simple.mylang  test_strset.mylang  (+2 more)
cfg/: main.mmd  square.mmd
output/: MainServer.java
output2/: RuntimeStub.java  col_drain-cfg.mmd  coro_helpers.asm  load_vedomosti-cfg.mmd  main-ast.mmd  main-cfg.mmd  main.asm  print_once-cfg.mmd  print_once.asm  print_two-cfg.mmd  print_two.asm  q2-ast.mmd  q4-ast.mmd  q4-cfg.mmd  q5-cfg.mmd  read_line-ast.mmd  run-ast.mmd  run-cfg.mmd  run.asm  str_eq-cfg.mmd  str_gt_lit-cfg.mmd
output3/: col_drain.asm  group_avg-ast.mmd  group_avg-cfg.mmd  group_avg.asm  load_group_plans.asm  load_people.asm  load_students.asm  load_types-ast.mmd  load_types-cfg.mmd  load_types.asm  load_vedomosti.asm  main-ast.mmd  main.asm  p_read.asm  parse_row.asm  print_str-cfg.mmd  print_str.asm  q1.asm  q2.asm  q3-ast.mmd  q3-cfg.mmd  q4.asm  q5.asm  q6-cfg.mmd  q6.asm  read_line-cfg.mmd  read_line.asm  str_eq.asm  str_eq_lit.asm  str_gt_lit.asm  (+2 more)
(+504 files in other folders)
